--- a/inde.html
+++ b/inde.html
@@ -205,7 +205,7 @@
 		<h2>Solicitar Mandado</h2>
 		<label>Ingrese la descripcion de su pedido: </label>
 		<input type="text" name="descripcion" id="descripcion" class="form-control" maxlength="300"  >
-		<input type="submit" name="solicitarM" class="btn btn-success" href="javascript:;" onclick="crearMandado($('#username').val(), $('#password').val(), $('#descripcion').val());return false;" value="Mandado En Curso">
+		<input type="submit" name="solicitarM" class="btn btn-success" href="javascript:;" onclick="crearMandado($('#username').val(), $('#password').val(), $('#descripcion').val());return false;" value="crear mandado">
 		<input type="submit" name="volverEntregas2" class="btn btn-success" href="javascript:;" onclick="volverEntregas2();return false;" value="Volver">
 		<br><br><br><label id="res_sol">Ingrese su pedido</label>
 	</div>
